--- a/user-api/src/main/resources/application.properties
+++ b/user-api/src/main/resources/application.properties
@@ -1,15 +1,17 @@
-## Application port
 server.port=8080
 
-## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
-## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/dev
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-## Default Schema
-spring.flyway.schemas=users
-spring.jpa.properties.hibernate.default_schema=users
+spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost:5432/dev}
+spring.datasource.username=${POSTGRES_USER:postgres}
+spring.datasource.password=${POSTGRES_PASSWORD:postgres}
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.properties.hibernate.default_schema=users
