--- a/product-api/src/main/resources/application.properties
+++ b/product-api/src/main/resources/application.properties
@@ -1,16 +1,39 @@
-server.port=8081
+# server.port=8081
+
+# spring.datasource.hikari.connectionTimeout=20000
+# spring.datasource.hikari.maximumPoolSize=5
+
+# spring.jpa.database=postgresql
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost:5432/dev}
+# spring.datasource.username=${POSTGRES_USER:postgres}
+# spring.datasource.password=${POSTGRES_PASSWORD:postgres}
+
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.properties.hibernate.show_sql=true
+# spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
+server.port=8082
 
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 spring.jpa.database=postgresql
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost:5432/dev}
+spring.datasource.url= ${POSTGRES_URL:jdbc:postgresql://localhost:5432/postgres}
 spring.datasource.username=${POSTGRES_USER:postgres}
 spring.datasource.password=${POSTGRES_PASSWORD:postgres}
 
-spring.jpa.hibernate.ddl-auto=update
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=create
+
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# sudo docker run -d -p 5432:5432 -e POSTGRES_PASSWORD=postgres postgres
